--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,21 @@
 
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Deploy HTML Files to AppService - CMST385
-
+name: Deploy HTML Files to AppServiceCMST385
 on:
   push:
     branches:
       - master
-
 jobs:
   build-and-deploy:
     runs-on: windows-latest
-
      steps:
-     
     - uses: actions/checkout@master
-    
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
       with:  
-      #Change the app-name to match what was provided to you in the publish settings file, this is in a naming convention of 'COURSENAME-STUDENTUID'
         app-name: 'cmst385-hperez1015929
         slot-name: 'production'
-      #Change the publish profile to match what you named your secret setup in GitHub, Example shown below
         publish-profile: ${{ secrets.AppServiceCMST385 }}
 
  
