--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,16 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Deploy HTML Files to AppServiceCMST385
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build-and-deploy:
     runs-on: windows-latest
-     steps:
+    steps:
     - uses: actions/checkout@master
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
-      with:  
-        app-name: 'cmst385-hperez1015929
+      with:
+        app-name: 'CMST-HPerez1015929'
         slot-name: 'production'
         publish-profile: ${{ secrets.AppServiceCMST385 }}
-
- 
