--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
       with:
-        app-name: 'CMST-HPerez1015929'
+        app-name: 'CMST385-HPerez1015929'
         slot-name: 'production'
         publish-profile: ${{ secrets.AppServiceCMST385 }}
